third_party/move/move-bytecode-verifier/transactional-tests/tests/check_duplication/duplicate_function_name.exp
processed 1 task
task 0 lines 1-5:  publish [module 0x42::M]
Error: error: duplicate function definition `f`
  ┌─ test:4:5
  │
4 │ fun f()
  │     ^


