third_party/move/move-bytecode-verifier/transactional-tests/tests/check_duplication/duplicate_function_name.masm
//# publish
module 0x42::M
fun f()

fun f()